--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,19 @@
+* Template (@stxt.schema): demo.com
+	Tree >>
+		Hola: 
+			Node 1: (3) TEXT
+			Node 2: (*)
+			
+* Schema (@stxt.schema): demo.com
+	Node: Node 1
+		Type: VALUE
+		Children:
+			Child: Node 3
+				Min: 3
+				Max: 4
+			Child: Demo
+			Child: Demo 3
+
 dev.stxt
 * Poner getParent() en los childs
 * toString correcto con niveles y estructura estándar
