--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
 * TEXT
 * VALUE (default)
-* value y text, no multiline y inline
+* value y text, no multilineText y inlineText
 * El transformer sólo vea el nodo justo después de crearlo, sin childs, etc... y lo transforma justo en ese momento, no al final. 
 	Entonces el freeze se hace antes de pasar por validators, etc.
 * Distinguir name de NormalizedName!! Ahora se pierde name, y debería ser sólo compact string. Quizá mejor un rawName, que sólo sea compact string, y así ya está
