--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,7 @@
+* STXT,JSON,etc. en tipos básicos permitidos
+* STXT como tipo para Structure
+* ENUM Para tipos
+
 * T2: Transformation To xxx
 	Directa a xml
 	Directa a yaml
